[package]
name = "jmestrap"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Heinz Ericson <heinz.ericson@gmail.com>"]
description = "High-performance event recorder with JMESPath filtering"
repository = "https://github.com/HeinzE/jmestrap"

[features]
default = []
sse = ["dep:reqwest"]
mqtt = ["dep:rumqttc"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "query"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

jmespath = "0.5"

# Optional SSE ingress
reqwest = { version = "0.12", features = ["stream"], optional = true }

# Optional MQTT support
rumqttc = { version = "0.25", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
