[package]
name = "jmestrap-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust client library for the JMESTrap REST API"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
